# hubspot-data-pipeline

./: .env_example  .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  lib.rs  main.rs
src/api/: client.rs  endpoints.rs  mod.rs
src/cli/: commands.rs  mod.rs
src/models/: company.rs  contact.rs  deal.rs  mod.rs  traits.rs
src/utils/: error.rs  file.rs  helpers.rs  mod.rs
